--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.11.0",
+    "morgan": "^1.10.0",
+    "properties-reader": "^2.3.0"
   }
 }
